# qwen2.5-omni_slu_ft

./: .gitignore  README.md  STABLE_VERSION_NOTES.md  audio_text_mix_candidates.py  audio_text_mix_e2e.py  audio_text_mix_e2e_dummy2.py  audio_text_mix_e2e_re.py  audio_text_mix_e2e_re_re.py  audio_text_mix_e2e_semantic.py  audio_text_mix_e2e_semantic_cascade.py  audio_text_mix_e2e_semantic_div.py  audio_text_mix_e2e_semantic_div_cascade.py  audio_text_mix_e2e_semantic_div_loss.py  audio_text_mix_e2e_semantic_semiteacher.py  audio_text_mix_e2e_semantic_semiteacher_re.py  check_config.py  check_padding.py  check_trainable_params.py  debug_processor.py  debug_training_data.py  diagnose_outputs.py  prepare_data.py  pyproject.toml  run_eval.py  run_h200.sh  run_server.sh  standalone_inference.py  train_qwen2_audio_slurp.py
Experiment_2/: README.md  actions.txt  actions_clustered_n2.txt  actions_clustered_n3.txt  attention_analysis.py  black_hole.py  cluster_labels.py  entropy_analysis.py  extract_slurp_labels.py  frequency_check.py  generate_dummy_cache.py  results_anal.py  run_analysis.py  run_analysis.sh  scenarios.txt  scenarios_clustered_n2.txt  scenarios_clustered_n3.txt  similality_check.py  slots_clustered_n2.txt  slots_clustered_n3.txt  slurp_labels.json  slurp_labels.txt  verify_pipeline.py  visualization.py  visualize_features.py
Experiment_2_Verify/: test.jsonl
Experiment_3/: cluster.py  label_extraction.py  slurp_clusters.json  slurp_confusing_pairs.json  slurp_metadata.json  slurp_metadata_intents.txt
Experiment_AcousticContrastiveDistill/: README.md  (+8 more)
(+72 files in other folders)
