[project]
name = "qwen2-audio-slurp"
version = "0.1.0"
description = "Finetuning Qwen2-Audio on SLURP dataset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "h5py>=3.10.0",
    "accelerate>=0.29.0",
    "datasets>=2.18.0",
    "setuptools>=70.0.0",
    "tqdm",
    "progress",
    "tabulate",
    "textdistance",
    "jiwer",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.2",
    "umap-learn>=0.5.11",
]

[tool.uv]
dev-dependencies = [
    "black",
    "isort",
    "flake8",
]
